<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/status_offline"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_status"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:singleLine="true"

                android:text="@string/default_alias"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/text_primary" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_gray"
            android:layout_marginVertical="10dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:id="@+id/tv_cpu"
                android:layout_columnWeight="1"
                android:text="@string/placeholder_cpu"
                android:textColor="#666666" />

            <TextView
                android:id="@+id/tv_ram"
                android:layout_columnWeight="1"
                android:text="@string/placeholder_ram"
                android:textColor="#666666" />

            <TextView
                android:id="@+id/tv_net_up"
                android:layout_columnWeight="1"
                android:text="@string/placeholder_net_up"
                android:textColor="#4CAF50"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_net_down"
                android:layout_columnWeight="1"
                android:text="@string/placeholder_net_down"
                android:textColor="#2196F3"
                android:layout_marginTop="5dp"/>
        </GridLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>